# tally

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAUDE_CODE_HANDOFF.md  FUTURE_USECASE.md  QUEUE_DESIGN.md
examples/: config.env.example  md1.sh  run_dftb.sh
examples/systemd/: tally-scheduler-oneshot.service  tally-scheduler.service  tally-scheduler.timer  tallyd.service
tally/: batch.py  cli.py  daemon.py  db.py  notifier.py  resources.py  runjob.py
tally/plugins/: generic.py
tally_run.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_batch.py  test_daemon.py  test_queue.py  test_smoke.py
