[project]
name = "tally-run"
version = "2.0.0"
description = "A lightweight single-machine SLURM alternative with Telegram notifications and phone control: submit jobs, get told when they finish or break, manage the queue from chat."
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []  # stdlib only — by design

[project.scripts]
tally = "tally.cli:main"
notify-run = "tally.cli:main"  # backward-compat alias
tally-scheduler = "tally.scheduler:main"  # standalone admission-queue loop (v1.5)
tallyd = "tally.daemon:main"  # scheduler + Telegram remote control (v2)

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
